Added music to Menu and Game Over screen

--- a/snake/snake.vcxproj.filters
+++ b/snake/snake.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClCompile Include="GameOverScreen.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="SnakeMenu.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SnakeGame.h">
@@ -60,6 +63,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameOverScreen.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="SnakeMenu.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
